Draft package booking provider entity and translation